--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "chart.js": "^4.4.9",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-scroll": "^1.9.0",
     "react-type-animation": "^3.2.0",
@@ -26,6 +28,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8"
+    "vite": "^6.3.5"
   }
 }
